--- a/tables.html
+++ b/tables.html
@@ -18,7 +18,7 @@
     <nav class="sidebar" id="sidebar">
       <h2>Weather App</h2>
       <ul>
-        <li><a href="dashboard.html">Dashboard</a></li>
+        <li><a href="index.html">Dashboard</a></li>
         <li><a href="tables.html">Tables</a></li>
       </ul>
     </nav>
